# Project-IR-eye-protection

./: Boxcon.sll  Boxcon.spj  README.md
GUI/: GUI.psd
GUI/Boxcon/libraries/: lv_conf.h
GUI/Boxcon/libraries/TFT_eSPI/: User_Setup.h
GUI/Boxcon/libraries/WiFiManager/: wm_strings_en.h
GUI/Boxcon/libraries/WiFiManager/extras/: WiFiManager.template.html  template.h
GUI/Boxcon/libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
GUI/Boxcon/libraries/ui/src/components/: ui_comp_hook.c
GUI/Boxcon/libraries/ui/src/images/: ui_img_1810231589.c  ui_img_currency_png.c  ui_img_power_png.c  ui_img_time_png.c
GUI/Boxcon/libraries/ui/src/screens/: ui_HOME.c  ui_Screen2.c  ui_Wifi_not_connect.c
GUI/Boxcon/ui/: Get_Time.ino  IR_recive.ino  Set_up_WiFi_Time.ino  ui.ino
IR LED/: Driver.7z
IR LED/25.8.2023/: 25.8.2023.ino
WifiManager/: WifiManager.ino
assets/: ui_font_Kanit.c  ui_font_Kanit.fcfg
display_design/graphicstest/: graphicstest.ino
reciver/: reciver.ino
